port 1.18 version to 1.19; remove mixins; remove web resources